# video-chat

./: pyproject.toml
base/: urls.py
base/templates/base/: lobby.html  main.html  room.html
live_video/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: streams.js
static/styles/: main.css
tests/: test_video_chat.py
